NIFI-14390: Addressing PR comments