@@ -19,8 +19,13 @@ package org.apache.nifi.processors.box;
 import com.box.sdk.BoxAIExtractStructuredResponse;
 import com.box.sdk.BoxAPIResponseException;
 import com.eclipsesource.json.JsonObject;
+import org.apache.nifi.controller.AbstractControllerService;
+import org.apache.nifi.flowfile.FlowFile;
+import org.apache.nifi.logging.ComponentLog;
 import org.apache.nifi.processors.box.ExtractStructuredBoxFileMetadata.ExtractionMethod;
 import org.apache.nifi.provenance.ProvenanceEventType;
+import org.apache.nifi.serialization.RecordReader;
+import org.apache.nifi.serialization.RecordReaderFactory;
 import org.apache.nifi.util.MockFlowFile;
 import org.apache.nifi.util.TestRunners;
 import org.junit.jupiter.api.BeforeEach;
@@ -29,34 +34,65 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import java.io.InputStream;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.function.BiFunction;
+import java.util.function.Function;
 
 import static org.mockito.Mockito.lenient;
+import static org.mockito.Mockito.mock;
 
 @ExtendWith(MockitoExtension.class)
 public class ExtractStructuredBoxFileMetadataTest extends AbstractBoxFileTest {
 
+    // Simple mock RecordReaderFactory for testing
+    private static class MockJsonRecordReaderFactory extends AbstractControllerService implements RecordReaderFactory {
+        @Override
+        public RecordReader createRecordReader(Map<String, String> variables, InputStream in, long l, ComponentLog componentLog) {
+            return mock(RecordReader.class);
+        }
+
+        @Override
+        public RecordReader createRecordReader(FlowFile flowFile, InputStream in, ComponentLog componentLog) {
+            return mock(RecordReader.class);
+        }
+    }
+
     private static final String TEMPLATE_KEY = "testTemplate";
-    private static final String FIELDS_STRING = "field1, field2, field3";
+    private static final String FIELDS_JSON = """
+            [
+              {
+                "key": "name",
+                "description": "The name of the person.",
+                "displayName": "Name",
+                "prompt": "The name is the first and last name from the email address.",
+                "type": "string",
+                "options": [
+                  { "key": "First Name" },
+                  { "key": "Last Name" }
+                ]
+              }
+            ]
+            """;
     private static final String COMPLETION_REASON = "success";
     private static final Date CREATED_AT = new Date();
 
     @Mock
     private BoxAIExtractStructuredResponse mockAIResponse;
 
+    // Suppliers to simulate responses from the Box API calls.
     private BiFunction<String, String, BoxAIExtractStructuredResponse> templateResponseSupplier;
-
-    private BiFunction<String, String, BoxAIExtractStructuredResponse> fieldsResponseSupplier;
+    private Function<InputStream, BoxAIExtractStructuredResponse> fieldsInputStreamResponseSupplier;
 
     @BeforeEach
     void setUp() throws Exception {
-        // Set up default suppliers to return mockAIResponse
+        // Default suppliers simply return the mock response.
         templateResponseSupplier = (templateKey, fileId) -> mockAIResponse;
-        fieldsResponseSupplier = (fieldsString, fileId) -> mockAIResponse;
+        fieldsInputStreamResponseSupplier = (inputStream) -> mockAIResponse;
 
+        // Override the processor methods to use our suppliers.
         final ExtractStructuredBoxFileMetadata testSubject = new ExtractStructuredBoxFileMetadata() {
             @Override
             BoxAIExtractStructuredResponse getBoxAIExtractStructuredResponseWithTemplate(final String templateKey,
@@ -65,9 +101,10 @@ public class ExtractStructuredBoxFileMetadataTest extends AbstractBoxFileTest {
             }
 
             @Override
-            BoxAIExtractStructuredResponse getBoxAIExtractStructuredResponseWithFields(final String fieldsString,
+            BoxAIExtractStructuredResponse getBoxAIExtractStructuredResponseWithFields(final RecordReader recordReader,
                                                                                        final String fileId) {
-                return fieldsResponseSupplier.apply(fieldsString, fileId);
+                // For testing, simply use the supplier.
+                return fieldsInputStreamResponseSupplier.apply(null);
             }
         };
 
@@ -75,11 +112,18 @@ public class ExtractStructuredBoxFileMetadataTest extends AbstractBoxFileTest {
         super.setUp();
 
         testRunner.setProperty(ExtractStructuredBoxFileMetadata.FILE_ID, TEST_FILE_ID);
-        testRunner.setProperty(ExtractStructuredBoxFileMetadata.EXTRACTION_METHOD, ExtractionMethod.TEMPLATE);
+        testRunner.setProperty(ExtractStructuredBoxFileMetadata.EXTRACTION_METHOD, ExtractionMethod.TEMPLATE.getValue());
         testRunner.setProperty(ExtractStructuredBoxFileMetadata.TEMPLATE_KEY, TEMPLATE_KEY);
+
+        // Add and enable a mock RecordReader service for FIELDS extraction.
+        final MockJsonRecordReaderFactory mockReaderFactory = new MockJsonRecordReaderFactory();
+        testRunner.addControllerService("mockReader", mockReaderFactory);
+        testRunner.enableControllerService(mockReaderFactory);
+        testRunner.setProperty(ExtractStructuredBoxFileMetadata.RECORD_READER, "mockReader");
+
         lenient().when(mockAIResponse.getCompletionReason()).thenReturn(COMPLETION_REASON);
         lenient().when(mockAIResponse.getCreatedAt()).thenReturn(CREATED_AT);
-        // Add a mock answer
+        // Prepare a sample JSON answer.
         JsonObject jsonAnswer = new JsonObject();
         jsonAnswer.add("title", "Sample Document");
         jsonAnswer.add("author", "John Doe");
@@ -92,11 +136,11 @@ public class ExtractStructuredBoxFileMetadataTest extends AbstractBoxFileTest {
         testRunner.run();
 
         testRunner.assertAllFlowFilesTransferred(ExtractStructuredBoxFileMetadata.REL_SUCCESS, 1);
-        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(ExtractStructuredBoxFileMetadata.REL_SUCCESS).getFirst();
+        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(ExtractStructuredBoxFileMetadata.REL_SUCCESS).get(0);
 
         flowFile.assertAttributeEquals("box.id", TEST_FILE_ID);
         flowFile.assertAttributeEquals("box.ai.template.key", TEMPLATE_KEY);
-        flowFile.assertAttributeEquals("box.ai.extraction.method", ExtractionMethod.TEMPLATE);
+        flowFile.assertAttributeEquals("box.ai.extraction.method", ExtractionMethod.TEMPLATE.name());
         flowFile.assertAttributeEquals("box.ai.completion.reason", COMPLETION_REASON);
 
         assertProvenanceEvent(ProvenanceEventType.ATTRIBUTES_MODIFIED);
@@ -104,18 +148,18 @@ public class ExtractStructuredBoxFileMetadataTest extends AbstractBoxFileTest {
 
     @Test
     void testSuccessfulMetadataExtractionWithFields() {
-        testRunner.setProperty(ExtractStructuredBoxFileMetadata.EXTRACTION_METHOD, ExtractionMethod.FIELDS);
+        testRunner.setProperty(ExtractStructuredBoxFileMetadata.EXTRACTION_METHOD, ExtractionMethod.FIELDS.getValue());
+        // Remove the template key property when using FIELDS.
         testRunner.removeProperty(ExtractStructuredBoxFileMetadata.TEMPLATE_KEY);
-        testRunner.setProperty(ExtractStructuredBoxFileMetadata.FIELDS, FIELDS_STRING);
 
-        testRunner.enqueue("test data");
+        testRunner.enqueue(FIELDS_JSON);
         testRunner.run();
 
         testRunner.assertAllFlowFilesTransferred(ExtractStructuredBoxFileMetadata.REL_SUCCESS, 1);
-        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(ExtractStructuredBoxFileMetadata.REL_SUCCESS).getFirst();
+        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(ExtractStructuredBoxFileMetadata.REL_SUCCESS).get(0);
 
         flowFile.assertAttributeEquals("box.id", TEST_FILE_ID);
-        flowFile.assertAttributeEquals("box.ai.extraction.method", ExtractionMethod.FIELDS);
+        flowFile.assertAttributeEquals("box.ai.extraction.method", ExtractionMethod.FIELDS.name());
         flowFile.assertAttributeEquals("box.ai.completion.reason", COMPLETION_REASON);
         flowFile.assertAttributeNotExists("box.ai.template.key");
 
@@ -124,7 +168,7 @@ public class ExtractStructuredBoxFileMetadataTest extends AbstractBoxFileTest {
 
     @Test
     void testFileNotFoundWithTemplate() {
-        // Configure template response supplier to throw a 404 exception
+        // Simulate a 404 error when processing a template.
         templateResponseSupplier = (templateKey, fileId) -> {
             throw new BoxAPIResponseException("Not Found", 404, "Not Found", null);
         };
@@ -133,34 +177,33 @@ public class ExtractStructuredBoxFileMetadataTest extends AbstractBoxFileTest {
         testRunner.run();
 
         testRunner.assertAllFlowFilesTransferred(ExtractStructuredBoxFileMetadata.REL_FILE_NOT_FOUND, 1);
-        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(ExtractStructuredBoxFileMetadata.REL_FILE_NOT_FOUND).getFirst();
+        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(ExtractStructuredBoxFileMetadata.REL_FILE_NOT_FOUND).get(0);
         flowFile.assertAttributeEquals(BoxFileAttributes.ERROR_CODE, "404");
         flowFile.assertAttributeEquals(BoxFileAttributes.ERROR_MESSAGE, "Not Found [404]");
     }
 
     @Test
     void testFileNotFoundWithFields() {
-        // Configure fields response supplier to throw a 404 exception
-        fieldsResponseSupplier = (fieldsString, fileId) -> {
+        // Simulate a 404 error when processing fields.
+        fieldsInputStreamResponseSupplier = (inputStream) -> {
             throw new BoxAPIResponseException("Not Found", 404, "Not Found", null);
         };
 
-        testRunner.setProperty(ExtractStructuredBoxFileMetadata.EXTRACTION_METHOD, ExtractionMethod.FIELDS);
+        testRunner.setProperty(ExtractStructuredBoxFileMetadata.EXTRACTION_METHOD, ExtractionMethod.FIELDS.getValue());
         testRunner.removeProperty(ExtractStructuredBoxFileMetadata.TEMPLATE_KEY);
-        testRunner.setProperty(ExtractStructuredBoxFileMetadata.FIELDS, FIELDS_STRING);
 
-        testRunner.enqueue("test data");
+        testRunner.enqueue(FIELDS_JSON);
         testRunner.run();
 
         testRunner.assertAllFlowFilesTransferred(ExtractStructuredBoxFileMetadata.REL_FILE_NOT_FOUND, 1);
-        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(ExtractStructuredBoxFileMetadata.REL_FILE_NOT_FOUND).getFirst();
+        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(ExtractStructuredBoxFileMetadata.REL_FILE_NOT_FOUND).get(0);
         flowFile.assertAttributeEquals(BoxFileAttributes.ERROR_CODE, "404");
         flowFile.assertAttributeEquals(BoxFileAttributes.ERROR_MESSAGE, "Not Found [404]");
     }
 
     @Test
     void testTemplateNotFound() {
-        // Configure template response supplier to throw a 404 exception with template not found message
+        // Simulate a 404 error that indicates the template was not found.
         templateResponseSupplier = (templateKey, fileId) -> {
             throw new BoxAPIResponseException("API Error", 404, "Specified Metadata Template not found", null);
         };
@@ -169,14 +212,14 @@ public class ExtractStructuredBoxFileMetadataTest extends AbstractBoxFileTest {
         testRunner.run();
 
         testRunner.assertAllFlowFilesTransferred(ExtractStructuredBoxFileMetadata.REL_TEMPLATE_NOT_FOUND, 1);
-        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(ExtractStructuredBoxFileMetadata.REL_TEMPLATE_NOT_FOUND).getFirst();
+        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(ExtractStructuredBoxFileMetadata.REL_TEMPLATE_NOT_FOUND).get(0);
         flowFile.assertAttributeEquals(BoxFileAttributes.ERROR_CODE, "404");
         flowFile.assertAttributeEquals(BoxFileAttributes.ERROR_MESSAGE, "API Error [404]");
     }
 
     @Test
     void testOtherAPIError() {
-        // Configure template response supplier to throw a 500 exception
+        // Simulate a non-404 error.
         templateResponseSupplier = (templateKey, fileId) -> {
             throw new BoxAPIResponseException("Server Error", 500, "Server Error", null);
         };
@@ -185,13 +228,14 @@ public class ExtractStructuredBoxFileMetadataTest extends AbstractBoxFileTest {
         testRunner.run();
 
         testRunner.assertAllFlowFilesTransferred(ExtractStructuredBoxFileMetadata.REL_FAILURE, 1);
-        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(ExtractStructuredBoxFileMetadata.REL_FAILURE).getFirst();
+        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(ExtractStructuredBoxFileMetadata.REL_FAILURE).get(0);
         flowFile.assertAttributeEquals(BoxFileAttributes.ERROR_CODE, "500");
+        flowFile.assertAttributeEquals(BoxFileAttributes.ERROR_MESSAGE, "Server Error [500]");
     }
 
     @Test
     void testGenericException() {
-        // Configure template response supplier to throw a runtime exception
+        // Simulate a generic runtime exception.
         templateResponseSupplier = (templateKey, fileId) -> {
             throw new RuntimeException("Something went wrong");
         };
@@ -200,13 +244,12 @@ public class ExtractStructuredBoxFileMetadataTest extends AbstractBoxFileTest {
         testRunner.run();
 
         testRunner.assertAllFlowFilesTransferred(ExtractStructuredBoxFileMetadata.REL_FAILURE, 1);
-        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(ExtractStructuredBoxFileMetadata.REL_FAILURE).getFirst();
+        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(ExtractStructuredBoxFileMetadata.REL_FAILURE).get(0);
         flowFile.assertAttributeEquals(BoxFileAttributes.ERROR_MESSAGE, "Something went wrong");
     }
 
     @Test
     void testExpressionLanguageWithTemplate() {
-        // Test with expression language in property values
         final Map<String, String> attributes = new HashMap<>();
         attributes.put("file.id", TEST_FILE_ID);
         attributes.put("template.key", TEMPLATE_KEY);
@@ -217,8 +260,7 @@ public class ExtractStructuredBoxFileMetadataTest extends AbstractBoxFileTest {
         testRunner.run();
 
         testRunner.assertAllFlowFilesTransferred(ExtractStructuredBoxFileMetadata.REL_SUCCESS, 1);
-        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(ExtractStructuredBoxFileMetadata.REL_SUCCESS).getFirst();
-
+        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(ExtractStructuredBoxFileMetadata.REL_SUCCESS).get(0);
         flowFile.assertAttributeEquals("box.id", TEST_FILE_ID);
         flowFile.assertAttributeEquals("box.ai.template.key", TEMPLATE_KEY);
         flowFile.assertAttributeEquals("box.ai.completion.reason", COMPLETION_REASON);
@@ -226,23 +268,36 @@ public class ExtractStructuredBoxFileMetadataTest extends AbstractBoxFileTest {
 
     @Test
     void testExpressionLanguageWithFields() {
-        // Test with expression language in property values
         final Map<String, String> attributes = new HashMap<>();
         attributes.put("file.id", TEST_FILE_ID);
-        attributes.put("fields", FIELDS_STRING);
 
-        testRunner.setProperty(ExtractStructuredBoxFileMetadata.EXTRACTION_METHOD, ExtractionMethod.FIELDS);
+        testRunner.setProperty(ExtractStructuredBoxFileMetadata.EXTRACTION_METHOD, ExtractionMethod.FIELDS.getValue());
         testRunner.removeProperty(ExtractStructuredBoxFileMetadata.TEMPLATE_KEY);
         testRunner.setProperty(ExtractStructuredBoxFileMetadata.FILE_ID, "${file.id}");
-        testRunner.setProperty(ExtractStructuredBoxFileMetadata.FIELDS, "${fields}");
-        testRunner.enqueue("test data", attributes);
+        testRunner.enqueue(FIELDS_JSON, attributes);
         testRunner.run();
 
         testRunner.assertAllFlowFilesTransferred(ExtractStructuredBoxFileMetadata.REL_SUCCESS, 1);
-        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(ExtractStructuredBoxFileMetadata.REL_SUCCESS).getFirst();
-
+        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(ExtractStructuredBoxFileMetadata.REL_SUCCESS).get(0);
         flowFile.assertAttributeEquals("box.id", TEST_FILE_ID);
-        flowFile.assertAttributeEquals("box.ai.extraction.method", ExtractionMethod.FIELDS);
+        flowFile.assertAttributeEquals("box.ai.extraction.method", ExtractionMethod.FIELDS.name());
         flowFile.assertAttributeEquals("box.ai.completion.reason", COMPLETION_REASON);
+    }
+
+    @Test
+    void testMalformedJsonFields() {
+        fieldsInputStreamResponseSupplier = (inputStream) -> {
+            throw new RuntimeException("Error parsing JSON fields");
+        };
+
+        testRunner.setProperty(ExtractStructuredBoxFileMetadata.EXTRACTION_METHOD, ExtractionMethod.FIELDS.getValue());
+        testRunner.removeProperty(ExtractStructuredBoxFileMetadata.TEMPLATE_KEY);
+
+        testRunner.enqueue("{bad json}");
+        testRunner.run();
+
+        testRunner.assertAllFlowFilesTransferred(ExtractStructuredBoxFileMetadata.REL_FAILURE, 1);
+        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(ExtractStructuredBoxFileMetadata.REL_FAILURE).get(0);
+        flowFile.assertAttributeExists(BoxFileAttributes.ERROR_MESSAGE);
     }
 }
